# velentrade

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  alembic.ini  deployment.md  design.md  docker-compose.yml  meta.yaml  pyproject.toml  spec.md  testing.md
authority-repairs/: REPAIR-20260505030241.yaml  REPAIR-20260505031840.yaml  REPAIR-20260505033526.yaml  REPAIR-20260506014730.yaml  REPAIR-20260506061914.yaml  REPAIR-20260506082825.yaml  REPAIR-20260506101112.yaml  REPAIR-20260506105512.yaml  REPAIR-20260508000435.yaml  REPAIR-20260512140939.yaml
contracts/: api-read-models.md  domain-artifact-schemas.md  verification-report-schemas.md
design-appendices/: agent-capability-profiles.md  agent-collaboration-protocol.md  decision-service-design.md  devops-observability-design.md  finance-knowledge-reflection-design.md  frontend-workbench-design.md  investment-chain-design.md  runtime-storage-architecture.md  workflow-data-service-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
migrations/: env.py
reviews/: contract-freeze-api-read-models-2026-04-29.yaml  contract-freeze-api-read-models-memory-2026-04-29.yaml  contract-freeze-api-read-models-team-decision-2026-04-29.yaml  contract-freeze-domain-artifact-schemas-2026-04-29.yaml  contract-freeze-domain-artifact-schemas-design-fix-2026-04-30.yaml  contract-freeze-domain-artifact-schemas-memory-2026-04-29.yaml  contract-freeze-domain-artifact-schemas-team-decision-2026-04-29.yaml  contract-freeze-verification-report-schemas-2026-04-29.yaml  design-review.yaml  (+5 more)
(+184 files in other folders)
